--- a/localSearch/index.html
+++ b/localSearch/index.html
@@ -1,4 +1,4 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
     <head>
         <link href="css/styles.css" media="all" rel="stylesheet" type="text/css">
