--- a/localSearch/index.html
+++ b/localSearch/index.html
@@ -13,7 +13,9 @@
             <button id="corpusUpload">load</button>
             <form>
                 <input type="text" id="query" autocomplete="off" placeholder="Search">
-                <ul id="query_autocomplete_results"></ul>
+                <ul id="query_autocomplete_results">
+                    <div class="clear"></div>
+                </ul>
             </form>
         </div>
         
@@ -39,8 +41,8 @@
                 if(tst !== undefined || bigram !== undefined || tst.size > 0 || bigram.size() > 0) {
                     var last = query[query.length - 1];
                     var prev = query[query.length - 2];
-                    if(query.length > 2 && evt.keyCode == 32) {
-                        populateList(prev, bigram.get(last));
+                    if(query.length > 1 && evt.keyCode == 32) {
+                        populateList(prev, bigram.get(prev));
                     } else if(last.match(/[a-z0-9-_]{2,}/)) { // Ensure valid pattern
                         populateList(last, tst.get(last));
                     } else {
@@ -62,21 +64,16 @@
 
             function wordGrams(sentence, numWords) {
                 var result = new Array();
-                var words = sentence.replace(/\r?\n|\r/gm, " ").split(" ");
+                var words = sentence.toLowerCase().replace(/[^a-zA-Z ]/g, "").split(" ");
                 for(var i = 0; i < words.length - numWords; i++) {
                     for(var j = 0; j < numWords; j++) {
                         if(result[i] === undefined) {
                             result[i] = new Array();
                         }
-                        result[i].push(normalize(words[i + j]));
+                        result[i].push(words[i + j]);
                     }
                 }
                 return result;
-            }
-
-            function normalize(word) {
-                // TODO: Handle stop words and simplify possesive words
-                return word.toLowerCase().replace(/[^a-zA-Z]+/, "");
             }
         </script>
     </body>
